--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -50,10 +50,10 @@
 }
 
 .App-section {
-  padding: 20vh;
-  background-image: linear-gradient(to bottom, transparent 60%, #000000 100%),linear-gradient(to top, transparent 60%, #282c34 100%);
+  padding: 50vh;
+  background-image: linear-gradient(to bottom, transparent 60%, #282c34 100%),linear-gradient(to top, transparent 60%, #282c34 100%);
   background-color: #ffffff;
-  min-height: 50vh;
+  min-height: 100vh;
   display: flex;  
   flex-direction: column;
   align-items: center;
@@ -65,6 +65,7 @@
 .App-link {
   color: #61dafb;
 }
+
 
 @keyframes App-logo-spin {
   from {
